# criando_api

./: Dockerfile  README.md  controller.py  db.py  docker-compose.yml  main.py  models.py  pyproject.toml  schema.py
src/: controller.py  database.db  database1.db  database2.db  database3.db  database7.db  db.py  main.py  models.py  requirements.txt  schema.py
tests/: conftest.py  database.db  test_root.py
